# Birge-Comm-Net-Python

./: README.md  setup.cfg
examples/: client_basic_set.py  core_server.py  ws_transponder.py
src/birge_comm_net/: __init__.py  core.py  node.py
src/birge_comm_net.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
