[metadata]
name = birge_comm_net
version = 0.0.1
author = -T.K.-
author_email = tk@uncertainty.email
description = A socket-based communication network library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/T-K-233/Birge-Comm-Net-Python
project_urls =
    Bug Tracker = https://github.com/T-K-233/Birge-Comm-Net-Python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: CC BY-NC 3.0
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src